--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,5 +1,6 @@
 .avatar-uploader {
-    margin:0 auto
+  width: 180px;
+  margin:0 auto;
 }
 .avatar-uploader .el-upload {
     border: 1px dashed #d9d9d9;
@@ -16,7 +17,7 @@
     color: #8c939d;
     width: 178px;
     height: 178px;
-    line-height: 178px;
+    line-height: 178px !important;
     text-align: center;
   }
   .avatar {
@@ -24,3 +25,25 @@
     height: 178px;
     display: block;
   }
+
+  .publish-container .ql-editor {
+    height: 300px;
+  }
+
+  // .article-containe
+  .publish-container .ql-toolbar.ql-snow {
+    padding: 0px 8px;
+  }
+
+// 当打开发布文章中图片按钮是 触发这个样式 
+.MyImg-container .el-dialog__footer {
+    text-align: center;
+}
+.MyImg-container .el-dialog__body {
+    padding-bottom: 0px;
+    padding-top: 0px;
+}
+
+.MyImg-container .el-dialog__header {
+  padding-top: 0px;
+}
